# opm

./: .gitignore  .installed.db  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  roadmap.md
.github/workflows/: rust.yml
.install/: control
docs/: CONFIG.md  USAGE.md
package_utils/: Cargo.toml
package_utils/src/: lib.rs
package_utils/src/deb/: conf.rs  extract.rs  install.rs
src/: config.rs  lib.rs  main.rs
src/package_ar/: extract_pk.rs  mod.rs
src/repos/: cache.rs  config.rs  database.rs  errors.rs  install.rs  lock.rs  mod.rs  os_fingerprint.rs  packages.rs  remove.rs  search.rs  setup.rs  update.rs  utils.rs
src/repos/commands/: install.rs  mod.rs  remove.rs  update.rs
src/repos/deb/: cache.rs  conf.rs  config.rs  database.rs  deb_control.rs  deb_package.rs  dependencies.rs  download.rs  extract.rs  install.rs  mod.rs  package.rs  remove.rs  scripts.rs  signatures.rs  sources.rs  update.rs
tests/: install_test.rs  setup_test.rs  update_test.rs
