[package]
name = "opm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.6"
tokio = { version = "1", features = ["full"] }
ar = "0.9.0"
tar = "0.4.37"
xz2 = "0.1.6"
deb-version = "0.1.1"
fs_extra = "1.2.0"
flate2 = "1.0.22"

[dependencies.clap]
version = "2.33.3"
default-features = true