[package]
name = "opm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.6"
tokio = { version = "1", features = ["full"] }
ar = "0.9.0"
tar = "0.4.37"
xz2 = "0.1.6"
deb-version = "0.1.1"
fs_extra = "1.2.0"
flate2 = "1.0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
bytes = "1"
sha2 = "0.10.0"
sha-1 = "0.10.0" # INSECURE
md5 = "0.7.0"

[dependencies.clap]
version = "2.33.3"
default-features = true